styles/dlg-task-info.css
.dlg__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.dlg__close-btn:hover {
  content: url(../assets/img/close-delete-cross-hover.svg);
  cursor: pointer;
}

.dlg__main {
  gap: 1.5rem;
  padding: 0 0.5rem;
}

.dlg__header_task-category {
  display: inline-flex;
  align-items: center;
  width: fit-content;
  color: var(--color-white);
  background-color: var(--color-11);
  border-radius: 0.5rem;
  padding: 0.25rem 1.5rem;
}

.dlg__main__task-title {
  font-size: 3.75rem;
  font-weight: 700;
  word-wrap: break-word;
}

.dlg__main__task__due-date,
.dlg__main_task-priority-box {
  display: flex;
  align-items: center;
  gap: 2rem;
}
.dlg__main__task__due-date-label,
.dlg__main__task-priority-title {
  color: var(--color-maincolor);
}

.dlg__main__task-assignments {
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}

.dlg__main__assignments-title,
.dlg__main__task-subtask-title {
  color: var(--color-maincolor);
  display: flex;
  padding: 0.25rem 0;
}

.dlg__user-box,
.dlg__main__task-subtask {
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 0.5rem 1rem;
}

.dlg__main__task-subtask {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;
}

.subtask-wrapper {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

.deletebox-wrapper {
  display: flex;
  height: 100%;
  align-items: center;
  gap: 0.5rem;
  opacity: 0;
  pointer-events: none;
}

.dlg__main__task-subtask:hover .deletebox-wrapper {
  opacity: 1;
  pointer-events: auto;
}

.dlg__main__task-subtask-box {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.dlg__main__task-subtask:hover {
  background-color: rgb(230, 230, 230);
  border-radius: 0.5rem;
  cursor: pointer;
}

.subtask-delete-btn {
  opacity: 0;
  pointer-events: none;
  width: 1.6rem;
  height: 1.6rem;
}

.dlg__main__task-subtask:hover .subtask-delete-btn {
  opacity: 1;
  pointer-events: auto;
}

.subtask-delete-btn:hover {
  content: url(../assets/img/delete-hover.svg);
  transform: scale(1.1);
  cursor: pointer;
}

.separator {
  display: flex;
  height: 100%;
  border: 1px solid var(--color-lightgrey);
}

.dlg__footer {
  display: flex;
  justify-content: flex-end;
  color: var(--color-maincolor);
}

.dlg__footer__options-box {
  display: flex;
}

.dlg__footer__options-box img {
  margin: 0 0.5rem;
}

.delete-btn {
  width: 5.125rem;
}

.edit-btn {
  width: 3.875rem;
}

.delete-btn:hover {
  content: url(../assets/img/delete-with-text-hover.svg);
  cursor: pointer;
}

.edit-btn:hover {
  content: url(../assets/img/edit-with-text-hover.svg);
  cursor: pointer;
}

